<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="80sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_high_score"
            android:text="@string/high_score_default"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/layout_margin_top"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_game" />
            <Button
                android:id="@+id/btn_reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_score" />
            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />
            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>